# ie-titanic-utils

./: Procfile  README.md  UI.ipynb  app.py  pyproject.toml  requirements.txt  str_utils.py
binder/: environment.yml
src/ie_utils/: __init__.py  __main__.py
tests/: test_ie_utils.py
