[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ie_utils"
author = "Hannah Chou"
author-email = "hannah.chou@student.ie.edu"
description-file = "README.md"

requires = [
          "pandas"
          ]
          
[tool.flit.entrypoints."console_scripts"]
ie_tokenize = "ie_utils.__main__:main"